--- a/.github/workflows/MavenBuild.yml
+++ b/.github/workflows/MavenBuild.yml
@@ -36,3 +36,21 @@ jobs:
       # 4. 运行 Maven 构建
       - name: Build with Maven
         run: mvn -B clean install
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        with:
+          tag_name: 4.4.4  # 使用推送的标签名
+          release_name: Release 4.4.4
+          body: 'Automated release for tag 4.4.4'
+          draft: false
+          prerelease: false
+
+      - name: Upload JAR to Release
+        uses: actions/upload-release-asset@v1
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: target/pv4.4.4.jar  # 替换为实际的 JAR 文件路径
+          asset_name: pv4.4.4.jar
+          asset_content_type: application/java
